syntax = "proto3";

package resourceaggregate.pb;

option go_package = "github.com/plgd-dev/hub/v2/resource-aggregate/commands;commands";

message AuditContext {
  string user_id = 1;
  string correlation_id = 2;
  string owner = 3;
}

message ResourceId {
  string device_id = 1;
  string href = 2;
}

// https://github.com/openconnectivityfoundation/core/blob/master/schemas/oic.links.properties.core-schema.json
message Resource {
    string href = 1;
    string device_id = 2;
    repeated string resource_types = 3;
    repeated string interfaces = 4;
    string anchor = 5;
    string title = 6;
    repeated string supported_content_types = 7;
    int64 valid_until = 8;
    Policy policy = 9;
    repeated EndpointInformation endpoint_informations = 10;
}

message Policy {
  int32 bit_flags = 1;
}

message Content {
    bytes data = 1;
    string content_type = 2;
    int32 coap_content_format = 3; // -1 means content-format was not provided
}

message EndpointInformation {
    string endpoint = 1;
    int64 priority = 2;
}

enum Status {
  UNKNOWN = 0;
  OK = 1;
  BAD_REQUEST = 2;
  UNAUTHORIZED = 3;
  FORBIDDEN = 4;
  NOT_FOUND = 5;
  UNAVAILABLE = 6;
  NOT_IMPLEMENTED = 7;
  ACCEPTED = 8;
  ERROR = 9;
  METHOD_NOT_ALLOWED = 10;
  CREATED = 11;
  CANCELED = 12; // Canceled indicates the operation was canceled (typically by the user).
  NOT_MODIFIED = 13; // Valid indicates the content hasn't changed. (provided etag in GET request is same as the resource etag).
}
